[package]
name = "disco_hooker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["full"] }
crossterm = "0.27.0"
ratatui = { version = "0.23.0", features = ["all-widgets"]}
futures = "0.3.28"
